<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/bck">

    <EditText
        android:id="@+id/userIdentityEditText"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:hint="@string/email_address_username" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_alignStart="@+id/userIdentityEditText"
        android:layout_alignEnd="@+id/userIdentityEditText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="126dp"
        android:gravity="center"
        android:hint="@string/password" />

    <Button
        android:id="@+id/loginButton"
        android:layout_alignStart="@+id/userIdentityEditText"
        android:layout_alignEnd="@+id/userIdentityEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#091660"
        android:layout_marginTop="250dp"
        android:layout_centerHorizontal="true"
        android:onClick="login"
        android:background="@color/btnBackground1"
        android:text="@string/log_in" />

    <Button
        android:id="@+id/skipToHomepageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#091660"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="16dp"
        android:text="@string/skip"
        android:background="@color/btnBackground1"
        android:onClick="skipToHomepage"/>

    <Button
        android:id="@+id/passwordResetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginStart="160dp"
        android:text="@string/forgot_your_password"
        android:onClick="passwordReset"
        android:background="@color/btnBackground1"
        android:textColor="#091660" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/userIdentityEditText"
        android:layout_marginTop="300dp"
        android:background="@color/btnBackground1"
        android:textAlignment="center"
        android:text="@string/don_t_have_an_account_register"
        android:onClick="openRegisterActivity"
        android:textColor="#091660" />

</android.widget.RelativeLayout>